# simple-SDD-template

./: cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  CLAUDE.md  README.md  project.md  pyproject.toml
{{cookiecutter.project_name}}/.cursor/commands/: overlord_example.md  overlord_guide.md  update_docs.md
{{cookiecutter.project_name}}/.cursor/rules/: agent.mdc  constraints.mdc  versioning.mdc
{{cookiecutter.project_name}}/scripts/: update_docs.py  update_project.py
{{cookiecutter.project_name}}/spec/: spec_example.md  spec_guide.md
